[project]
name = "keep-logs-safe"
version = "0.1.0"
description = "FastAPI app that registers logs and keep them safe in a MongoDB database"
authors = [
    {name = "Gideon Oba",email = "deyonoba@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "colorama (>=0.4.6,<0.5.0)",
    "pymongo (>=4.11.3,<5.0.0)",
    "dnspython (>=2.7.0,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
